--- a/src/etc/nginx/nginx.conf.template
+++ b/src/etc/nginx/nginx.conf.template
@@ -229,9 +229,11 @@ http {
 
       # https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_set_header
       # Default is "Host $proxy_host" and "Connection close"
-      proxy_set_header Connection $connection_upgrade;
-      proxy_set_header Host       $host;
-      proxy_set_header Upgrade    $http_upgrade;
+      proxy_set_header Connection      $connection_upgrade;
+      proxy_set_header Host            $host;
+      proxy_set_header Upgrade         $http_upgrade;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP       $remote_addr;
 
       # https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_read_timeout
       # Default is 60s
