⏲️ Add `sessions_opts` (#52)
Signed-off-by: Jacob Woffenden <jacob.woffenden@justice.gov.uk>

--- a/.trivyignore
+++ b/.trivyignore
@@ -4,6 +4,13 @@
 #  2. OpenResty publish an APT distrobution we can use
 CVE-2024-5171
 CVE-2024-6197
+CVE-2024-8176
 CVE-2024-45490
 CVE-2024-45491
 CVE-2024-45492
+CVE-2024-55549
+CVE-2024-56171
+CVE-2025-0840
+CVE-2025-24855
+CVE-2025-24928
+CVE-2025-27113
